core/src-gen/de/frotty/mdlviewer/antlr/MdlGrammarParser.java
// Generated from C:\Users\Frotty\Documents\GitHub\MdlViewer\core\parserspec\MdlGrammar.g4 by ANTLR 4.5
package de.frotty.mdlviewer.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MdlGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, T__64=65, T__65=66, 
		T__66=67, T__67=68, T__68=69, T__69=70, T__70=71, T__71=72, T__72=73, 
		T__73=74, T__74=75, T__75=76, T__76=77, T__77=78, T__78=79, T__79=80, 
		T__80=81, T__81=82, T__82=83, T__83=84, T__84=85, T__85=86, T__86=87, 
		T__87=88, T__88=89, T__89=90, T__90=91, T__91=92, T__92=93, T__93=94, 
		T__94=95, T__95=96, T__96=97, T__97=98, T__98=99, T__99=100, T__100=101, 
		T__101=102, T__102=103, T__103=104, T__104=105, CURLY_BRACKET_OPEN=106, 
		CURLY_BRACKET_CLOSE=107, BRACKET_OPEN=108, BRACKET_CLOSE=109, COMMA=110, 
		INT=111, FLOAT=112, STRING=113, NL=114, WS=115, LINE_COMMENT=116;
	public static final int
		RULE_mdlfile = 0, RULE_versionNote = 1, RULE_modelStructure = 2, RULE_sequencesBlock = 3, 
		RULE_animationBlock = 4, RULE_globalSequenceBlock = 5, RULE_textureBlock = 6, 
		RULE_bitmapDef = 7, RULE_materialBlock = 8, RULE_materialDef = 9, RULE_layerDef = 10, 
		RULE_alphaDef = 11, RULE_textureAnimBlock = 12, RULE_tvertexAnimDef = 13, 
		RULE_geosetBlock = 14, RULE_verticesDef = 15, RULE_normalsDef = 16, RULE_tverticesDef = 17, 
		RULE_vertexGroupDef = 18, RULE_facesDef = 19, RULE_trianglesDef = 20, 
		RULE_groupsDef = 21, RULE_twoFTuple = 22, RULE_threeFTuple = 23, RULE_fourFTuple = 24, 
		RULE_geosetAnim = 25, RULE_boneDef = 26, RULE_lightDef = 27, RULE_pivotDef = 28;
	public static final String[] ruleNames = {
		"mdlfile", "versionNote", "modelStructure", "sequencesBlock", "animationBlock", 
		"globalSequenceBlock", "textureBlock", "bitmapDef", "materialBlock", "materialDef", 
		"layerDef", "alphaDef", "textureAnimBlock", "tvertexAnimDef", "geosetBlock", 
		"verticesDef", "normalsDef", "tverticesDef", "vertexGroupDef", "facesDef", 
		"trianglesDef", "groupsDef", "twoFTuple", "threeFTuple", "fourFTuple", 
		"geosetAnim", "boneDef", "lightDef", "pivotDef"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'Version'", "'FormatVersion'", "'Model'", "'NumGeosets'", "'NumGeosetAnims'", 
		"'NumHelpers'", "'NumLights'", "'NumBones'", "'NumAttachments'", "'NumParticleEmitters'", 
		"'NumParticleEmitters2'", "'NumRibbonEmitters'", "'NumEvents'", "'BlendTime'", 
		"'MinimumExtent'", "'MaximumExtent'", "'BoundsRadius'", "'Sequences'", 
		"'Anim'", "'Interval'", "'NonLooping'", "'MoveSpeeed'", "'Rarity'", "'GlobalSequences'", 
		"'Duration'", "'Textures'", "'Bitmap'", "'Image'", "'ReplaceableId'", 
		"'WrapWidth'", "'WrapHeight'", "'Materials'", "'Material'", "'ConstantColor'", 
		"'SortPrimsFarZ'", "'FullResolution'", "'PriorityPlane'", "'Layer'", "'FilterMode'", 
		"'None'", "'Transparent'", "'Blend'", "'Additive'", "'AddAlpha'", "'Modulate'", 
		"'Modulate2x'", "'Unshaded'", "'SphereEnvMap'", "'TwoSided'", "'Unfogged'", 
		"'NoDepthTest'", "'NoDepthSet'", "'static'", "'TextureID'", "'TVertexAnimId'", 
		"'CoordId'", "'Alpha'", "'DontInterp'", "':'", "'TexturesAnims'", "'TVertexAnim'", 
		"'Translation'", "'Rotation'", "'Scaling'", "'Geoset'", "'MaterialID'", 
		"'SelectionGroup'", "'Unselectable'", "'Vertices'", "'Normals'", "'TVertices'", 
		"'VertexGroup'", "'Faces'", "'Triangles'", "'Groups'", "'Matrices'", "'GeosetAnim'", 
		"'DropShadow'", "'Color'", "'GeosetId'", "'Bone'", "'ObjectId'", "'Parent'", 
		"'BillboardedLockZ'", "'BillboardedLockY'", "'BillboardedLockX'", "'Billboarded'", 
		"'CameraAnchored'", "'DontInherit'", "'Multiple'", "'GeosetAnimId'", "'Hermite'", 
		"'InTan'", "'OutTan'", "'Visibility'", "'Light'", "'Omnidirectional'", 
		"'Directional'", "'Ambient'", "'AtennuationStart'", "'AtennuationEnd'", 
		"'Intensity'", "'AmbIntensity'", "'AmbColor'", "'PivotPoints'", "'{'", 
		"'}'", "'('", "')'", "','"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, "CURLY_BRACKET_OPEN", 
		"CURLY_BRACKET_CLOSE", "BRACKET_OPEN", "BRACKET_CLOSE", "COMMA", "INT", 
		"FLOAT", "STRING", "NL", "WS", "LINE_COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MdlGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MdlGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class MdlfileContext extends ParserRuleContext {
		public VersionNoteContext versionNote() {
			return getRuleContext(VersionNoteContext.class,0);
		}
		public ModelStructureContext modelStructure() {
			return getRuleContext(ModelStructureContext.class,0);
		}
		public SequencesBlockContext sequencesBlock() {
			return getRuleContext(SequencesBlockContext.class,0);
		}
		public TextureBlockContext textureBlock() {
			return getRuleContext(TextureBlockContext.class,0);
		}
		public MaterialBlockContext materialBlock() {
			return getRuleContext(MaterialBlockContext.class,0);
		}
		public GlobalSequenceBlockContext globalSequenceBlock() {
			return getRuleContext(GlobalSequenceBlockContext.class,0);
		}
		public TextureAnimBlockContext textureAnimBlock() {
			return getRuleContext(TextureAnimBlockContext.class,0);
		}
		public List<GeosetBlockContext> geosetBlock() {
			return getRuleContexts(GeosetBlockContext.class);
		}
		public GeosetBlockContext geosetBlock(int i) {
			return getRuleContext(GeosetBlockContext.class,i);
		}
		public List<GeosetAnimContext> geosetAnim() {
			return getRuleContexts(GeosetAnimContext.class);
		}
		public GeosetAnimContext geosetAnim(int i) {
			return getRuleContext(GeosetAnimContext.class,i);
		}
		public List<BoneDefContext> boneDef() {
			return getRuleContexts(BoneDefContext.class);
		}
		public BoneDefContext boneDef(int i) {
			return getRuleContext(BoneDefContext.class,i);
		}
		public List<LightDefContext> lightDef() {
			return getRuleContexts(LightDefContext.class);
		}
		public LightDefContext lightDef(int i) {
			return getRuleContext(LightDefContext.class,i);
		}
		public PivotDefContext pivotDef() {
			return getRuleContext(PivotDefContext.class,0);
		}
		public MdlfileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mdlfile; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MdlGrammarVisitor ) return ((MdlGrammarVisitor<? extends T>)visitor).visitMdlfile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MdlfileContext mdlfile() throws RecognitionException {
		MdlfileContext _localctx = new MdlfileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_mdlfile);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(58);
			versionNote();
			}
			{
			setState(59);
			modelStructure();
			}
			{
			setState(60);
			sequencesBlock();
			}
			setState(62);
			_la = _input.LA(1);
			if (_la==T__23) {
				{
				setState(61);
				globalSequenceBlock();
				}
			}

			{
			setState(64);
			textureBlock();
			}
			{
			setState(65);
			materialBlock();
			}
			setState(67);
			_la = _input.LA(1);
			if (_la==T__59) {
				{
				setState(66);
				textureAnimBlock();
				}
			}

			setState(72);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__64) {
				{
				{
				setState(69);
				geosetBlock();
				}
				}
				setState(74);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(78);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__76) {
				{
				{
				setState(75);
				geosetAnim();
				}
				}
				setState(80);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(84);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__80) {
				{
				{
				setState(81);
				boneDef();
				}
				}
				setState(86);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(90);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__95) {
				{
				{
				setState(87);
				lightDef();
				}
				}
				setState(92);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(94);
			_la = _input.LA(1);
			if (_la==T__104) {
				{
				setState(93);
				pivotDef();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VersionNoteContext extends ParserRuleContext {
		public Token formatVersion;
		public TerminalNode CURLY_BRACKET_OPEN() { return getToken(MdlGrammarParser.CURLY_BRACKET_OPEN, 0); }
		public TerminalNode COMMA() { return getToken(MdlGrammarParser.COMMA, 0); }
		public TerminalNode CURLY_BRACKET_CLOSE() { return getToken(MdlGrammarParser.CURLY_BRACKET_CLOSE, 0); }
		public TerminalNode INT() { return getToken(MdlGrammarParser.INT, 0); }
		public VersionNoteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_versionNote; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MdlGrammarVisitor ) return ((MdlGrammarVisitor<? extends T>)visitor).visitVersionNote(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VersionNoteContext versionNote() throws RecognitionException {
		VersionNoteContext _localctx = new VersionNoteContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_versionNote);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			match(T__0);
			setState(97);
			match(CURLY_BRACKET_OPEN);
			setState(98);
			match(T__1);
			setState(99);
			((VersionNoteContext)_localctx).formatVersion = match(INT);
			setState(100);
			match(COMMA);
			setState(101);
			match(CURLY_BRACKET_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ModelStructureContext extends ParserRuleContext {
		public Token modelName;
		public Token geosetCount;
		public Token geosetAnimCount;
		public Token helperCount;
		public Token lightCount;
		public Token boneCount;
		public Token attachmentCount;
		public Token emitters1Count;
		public Token emitters2Count;
		public Token ribbonEmittersCount;
		public Token eventCount;
		public Token blendTime;
		public ThreeFTupleContext minExtend;
		public ThreeFTupleContext maxExtend;
		public Token boundsRadius;
		public TerminalNode CURLY_BRACKET_OPEN() { return getToken(MdlGrammarParser.CURLY_BRACKET_OPEN, 0); }
		public TerminalNode CURLY_BRACKET_CLOSE() { return getToken(MdlGrammarParser.CURLY_BRACKET_CLOSE, 0); }
		public TerminalNode STRING() { return getToken(MdlGrammarParser.STRING, 0); }
		public List<TerminalNode> COMMA() { return getTokens(MdlGrammarParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(MdlGrammarParser.COMMA, i);
		}
		public List<TerminalNode> INT() { return getTokens(MdlGrammarParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(MdlGrammarParser.INT, i);
		}
		public List<ThreeFTupleContext> threeFTuple() {
			return getRuleContexts(ThreeFTupleContext.class);
		}
		public ThreeFTupleContext threeFTuple(int i) {
			return getRuleContext(ThreeFTupleContext.class,i);
		}
		public TerminalNode FLOAT() { return getToken(MdlGrammarParser.FLOAT, 0); }
		public ModelStructureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_modelStructure; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MdlGrammarVisitor ) return ((MdlGrammarVisitor<? extends T>)visitor).visitModelStructure(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModelStructureContext modelStructure() throws RecognitionException {
		ModelStructureContext _localctx = new ModelStructureContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_modelStructure);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			match(T__2);
			setState(104);
			((ModelStructureContext)_localctx).modelName = match(STRING);
			setState(105);
			match(CURLY_BRACKET_OPEN);
			setState(109);
			_la = _input.LA(1);
			if (_la==T__3) {
				{
				setState(106);
				match(T__3);
				setState(107);
				((ModelStructureContext)_localctx).geosetCount = match(INT);
				setState(108);
				match(COMMA);
				}
			}

			setState(114);
			_la = _input.LA(1);
			if (_la==T__4) {
				{
				setState(111);
				match(T__4);
				setState(112);
				((ModelStructureContext)_localctx).geosetAnimCount = match(INT);
				setState(113);
				match(COMMA);
				}
			}

			setState(119);
			_la = _input.LA(1);
			if (_la==T__5) {
				{
				setState(116);
				match(T__5);
				setState(117);
				((ModelStructureContext)_localctx).helperCount = match(INT);
				setState(118);
				match(COMMA);
				}
			}

			setState(124);
			_la = _input.LA(1);
			if (_la==T__6) {
				{
				setState(121);
				match(T__6);
				setState(122);
				((ModelStructureContext)_localctx).lightCount = match(INT);
				setState(123);
				match(COMMA);
				}
			}

			setState(129);
			_la = _input.LA(1);
			if (_la==T__7) {
				{
				setState(126);
				match(T__7);
				setState(127);
				((ModelStructureContext)_localctx).boneCount = match(INT);
				setState(128);
				match(COMMA);
				}
			}

			setState(134);
			_la = _input.LA(1);
			if (_la==T__8) {
				{
				setState(131);
				match(T__8);
				setState(132);
				((ModelStructureContext)_localctx).attachmentCount = match(INT);
				setState(133);
				match(COMMA);
				}
			}

			setState(139);
			_la = _input.LA(1);
			if (_la==T__9) {
				{
				setState(136);
				match(T__9);
				setState(137);
				((ModelStructureContext)_localctx).emitters1Count = match(INT);
				setState(138);
				match(COMMA);
				}
			}

			setState(144);
			_la = _input.LA(1);
			if (_la==T__10) {
				{
				setState(141);
				match(T__10);
				setState(142);
				((ModelStructureContext)_localctx).emitters2Count = match(INT);
				setState(143);
				match(COMMA);
				}
			}

			setState(149);
			_la = _input.LA(1);
			if (_la==T__11) {
				{
				setState(146);
				match(T__11);
				setState(147);
				((ModelStructureContext)_localctx).ribbonEmittersCount = match(INT);
				setState(148);
				match(COMMA);
				}
			}

			setState(154);
			_la = _input.LA(1);
			if (_la==T__12) {
				{
				setState(151);
				match(T__12);
				setState(152);
				((ModelStructureContext)_localctx).eventCount = match(INT);
				setState(153);
				match(COMMA);
				}
			}

			{
			setState(156);
			match(T__13);
			setState(157);
			((ModelStructureContext)_localctx).blendTime = match(INT);
			setState(158);
			match(COMMA);
			}
			setState(164);
			_la = _input.LA(1);
			if (_la==T__14) {
				{
				setState(160);
				match(T__14);
				setState(161);
				((ModelStructureContext)_localctx).minExtend = threeFTuple();
				setState(162);
				match(COMMA);
				}
			}

			setState(170);
			_la = _input.LA(1);
			if (_la==T__15) {
				{
				setState(166);
				match(T__15);
				setState(167);
				((ModelStructureContext)_localctx).maxExtend = threeFTuple();
				setState(168);
				match(COMMA);
				}
			}

			setState(175);
			_la = _input.LA(1);
			if (_la==T__16) {
				{
				setState(172);
				match(T__16);
				setState(173);
				((ModelStructureContext)_localctx).boundsRadius = match(FLOAT);
				setState(174);
				match(COMMA);
				}
			}

			setState(177);
			match(CURLY_BRACKET_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SequencesBlockContext extends ParserRuleContext {
		public Token sequenceCount;
		public AnimationBlockContext animationBlock;
		public List<AnimationBlockContext> animations = new ArrayList<AnimationBlockContext>();
		public TerminalNode CURLY_BRACKET_OPEN() { return getToken(MdlGrammarParser.CURLY_BRACKET_OPEN, 0); }
		public TerminalNode CURLY_BRACKET_CLOSE() { return getToken(MdlGrammarParser.CURLY_BRACKET_CLOSE, 0); }
		public TerminalNode INT() { return getToken(MdlGrammarParser.INT, 0); }
		public List<AnimationBlockContext> animationBlock() {
			return getRuleContexts(AnimationBlockContext.class);
		}
		public AnimationBlockContext animationBlock(int i) {
			return getRuleContext(AnimationBlockContext.class,i);
		}
		public SequencesBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sequencesBlock; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MdlGrammarVisitor ) return ((MdlGrammarVisitor<? extends T>)visitor).visitSequencesBlock(this);
			else return visitor.visitChildren(this);
		}
	}
